eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 127039843570.dkr.ecr.eu-west-1.amazonaws.com/udemy/simple_bank:49cc2ef6d9154e8eaff05cc4aeda152feedf1a89
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-server
        - containerPort: 9090
          name: grpc-server
